updated layout and added happyIcon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/faviconIC.svg" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Inspiring Colors || Project</title>
   </head>
@@ -21,27 +28,26 @@
         <h2>Inspiring Colors || Project</h2>
       </nav>
       <header class="mainHeader">
+        <div class="happyIconContainer">
+          <span class="happyIcon"></span>
+        </div>
         <div class="container">
-          <h2 class="mainTxt txtOne">background colorizer:</h2>
-          <h2 class="mainTxt"><span class="color">#F1F5F8</span></h2>
+          <h2 class="mainTxt txtOne">
+            background colorizer: <span class="color">#F1F5F8</span>
+          </h2>
         </div>
       </header>
       <section class="heroSection">
-        <div class="btnOne">
-          <button class="btnHero btnOne" id="btn">click me</button>
-        </div>
-        <div class="btnTwo">
-          <button class="btnHero btnTwo" id="btnCopy">copy me</button>
-        </div>
+        <button class="btnHero btnOne" id="btn">click me</button>
+
+        <button class="btnHero btnTwo" id="btnCopy">copy me</button>
       </section>
       <div class="msgContainer">
         <h4>
-          <span class="color-reply"
-            >Hi there! click to get hella inspired ☀</span
-          >
+          <span class="msg-reply">Hi there! click to get hella inspired ☀</span>
         </h4>
       </div>
-      <footer>#yippee ki yay</footer>
+      <footer># yippee ki yay</footer>
     </div>
     <script src="app.js"></script>
   </body>
